testdata/scanner/kubescape/manifests/exposed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exposed-service
spec:
  type: NodePort  # BAD: Exposes service on all nodes
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: exposed
